--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
   "author": "Runor Adjekpiyede",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/app.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migrate": "yarn run typeorm migration:run",
+    "migrate:revert": "yarn run typeorm migration:revert"
   },
   "dependencies": {
     "dotenv": "^9.0.2",
