--- a/server/package.json
+++ b/server/package.json
@@ -15,13 +15,15 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "pg": "^8.6.0",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.32",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
     "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
     "@types/supertest": "^2.0.11",
+    "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "chai": "^4.2.0",
