--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "faker": "^5.4.0",
     "pg": "^8.6.0",
     "typeorm": "^0.2.32",
     "yup": "^0.32.9"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.18",
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.1.7",
     "@types/mocha": "^8.2.2",
     "@types/supertest": "^2.0.11",
     "@types/yup": "^0.29.11",
