--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
     "migrate": "yarn run typeorm migration:run",
     "migrate:revert": "yarn run typeorm migration:revert",
+    "seed-sampleData": "ts-node ./src/scripts/seedSampleData.ts",
     "test": "cross-env TS_NODE_FILES=true TODO_ENV=test nyc --reporter=lcov --reporter=text-summary mocha -r ts-node/register --files src __tests__/**/*.ts --timeout 40000 --exit"
   },
   "dependencies": {
